--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
+import org.gradle.api.initialization.resolve.RepositoriesMode
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
+}
+
+repositories {
+    google()
 }
