--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 import org.gradle.api.initialization.resolve.RepositoriesMode
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories{
+        google()
+        mavenCentral()
+    }
+    dependencies{
+        classpath 'com.google.gms:google-services:4.3.15'
+    }
+}
 plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
@@ -9,3 +18,4 @@ plugins {
 repositories {
     google()
 }
+
