--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.2.0')
     implementation 'com.google.firebase:firebase-messaging'
     implementation("org.greenrobot:eventbus:3.3.1")
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
